# plugin.video.orange.fr

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  README  README.md  addon.py  addon.xml  channels.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
doc/: README.fr.md
docs/: README.fr.md
resources/: addon.py  feed copy.py  feed.py  m3u_generator.py  orange-fr.m3u  orange-fr.xml  service.py  settings.xml
resources/data/: orange-fr.m3u  orange-fr.xml
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.fr_fr/: strings.po
resources/lib/: __init__.py  addon.py  channel.py  channelmanager.py  iptvmanager.py  m3u_generator.py  orange.py  routes.py  types.py  utils.py  xmltv_generator.py
resources/lib/generators/: __init__.py  epg_generator.py  m3u8_generator.py  playlist_generator.py
resources/lib/managers/: catchup_manager.py  iptv_manager.py  stream_manager.py
resources/lib/provider_templates/: __init__.py  orange.py
resources/lib/providers/: __init__.py  abstract_orange_provider.py  cache_provider.py  orange.py  provider_interface.py  provider_wrapper.py
resources/lib/providers/fr/: __init__.py  free.py  free_oqee.py  orange.py  orange_caraibe.py  orange_france.py  orange_reunion.py  sfr.py
resources/lib/utils/: gui.py  kodi.py  orange.py  request.py
